--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,6 @@
 default: &default
   adapter: mysql2
+  encoding: utf8
   pool: 5
   timeout: 5000
   username: root
@@ -20,3 +21,5 @@ test:
 
 production:
   <<: *default
+  database: goodjobs_prod
+  host: ENV['mysql_url']
