--- a/config/database.yml
+++ b/config/database.yml
@@ -18,5 +18,6 @@ test:
 
 production:
   <<: *default
+  adapter: postgresql
   database: goodjobs_prod
-  host: ENV['mysql_url']
+  host: ENV['DATABASE_URL']
